Added a new parameter to the config to display the full menu for administrators.

--- a/example_settings.yml
+++ b/example_settings.yml
@@ -11,3 +11,6 @@ PARKING_SPOTS: ["А01", "А02", "B04"]
 
 # Имя базы данных SQLite, где будет храниться вся информация
 DB_NAME: "parking_spots.db"
+
+# Список администраторов, которые могут выгружать отчёты по использованию парковочных мест
+ADMINISTRATORS: ["VladimirPn", "SomeName1"]
