Исправление опечаток в плейбуке.

--- a/playbook_for_local_installation.yml
+++ b/playbook_for_local_installation.yml
@@ -26,5 +26,5 @@
 
     - name: Установка библиотек из requirements.txt
       pip:
-        requirements: {{ ansible_env.HOME }}/Anna/requirements.txt
-          executable: {{ ansible_env.HOME }}/venv/bin/pip
+        requirements: "{{ ansible_env.HOME }}/Anna/requirements.txt"
+        executable: {{ ansible_env.HOME }}/venv/bin/pip
