--- a/playbook_for_local_installation.yml
+++ b/playbook_for_local_installation.yml
@@ -14,14 +14,14 @@
     - name: Создание виртуальной среды и её активация.
       command: python3 -m venv venv
       args:
-        chdir: {{ ansible_env.PATH }}
+        chdir: "{{ ansible_env.PATH }}"
         environment:
           PATH: "{{  ansible_env.PATH }}:{{ ansible_env.HOME }}/.local/bin"
         register: venv_output
     - name: Активация виртуальной среды.
       command: source venv/bin/activate
       args:
-        chdir: {{ ansible_env.PATH }}
+        chdir: "{{ ansible_env.PATH }}"
       when: venv_output is changed
 
     - name: Установка библиотек из requirements.txt
