Исправление опечаток в плейбуке.

--- a/playbook_for_local_installation.yml
+++ b/playbook_for_local_installation.yml
@@ -13,11 +13,12 @@
         name: python3.11-venv
         state: present
 
-    - name: Создание виртуальной среды и её активация.
+    - name: Создание виртуальной среды
       ansible.builtin.command:
-      cmd: python3 -m venv env
-      chdir: "{{ ansible_env.HOME }}"
-      register: venv_output
+        cmd: python3 -m venv env
+      args:
+        chdir: "{{ ansible_env.HOME }}"
+        register: venv_output
 
     - name: Активация виртуальной среды.
       command: source venv/bin/activate
