--- a/playbook_for_local_installation.yml
+++ b/playbook_for_local_installation.yml
@@ -13,6 +13,10 @@
         name: python3.11-venv
         state: present
 
+    - name: Print the gateway for each host when defined
+      ansible.builtin.debug:
+        msg: "{{ ansible_env.HOME }} {{ ansible_env.USR }}"
+
     - name: Создание виртуальной среды
       ansible.builtin.command:
         cmd: python3 -m venv env
