--- a/playbook_for_local_installation.yml
+++ b/playbook_for_local_installation.yml
@@ -15,7 +15,7 @@
 
     - name: Print the gateway for each host when defined
       ansible.builtin.debug:
-        msg: "{{ ansible_env.HOME }} {{ ansible_env.USR }}"
+        msg: "{{ ansible_env.HOME }} {{ lookup('ansible.builtin.env', 'USR') }}"
 
     - name: Создание виртуальной среды
       ansible.builtin.command:
