Исправление опечаток в плейбуке.

--- a/playbook_for_local_installation.yml
+++ b/playbook_for_local_installation.yml
@@ -1,7 +1,7 @@
 ---
 - name: Установка пакетов, создание виртуальной среды, загрузка кода, установка библиотек, обновление файла настроек и запуск приложения.
   hosts: localhost
-  become: yes
+  become: no
   tasks:
     - name: Установка пакета python3-pip
       apt:
