--- a/playbook_for_local_installation.yml
+++ b/playbook_for_local_installation.yml
@@ -13,10 +13,6 @@
         name: python3.11-venv
         state: present
 
-    - name: Print the gateway for each host when defined
-      ansible.builtin.debug:
-        msg: "{{ ansible_env.HOME }} {{ lookup('ansible.builtin.env', 'USR') }}"
-
     - name: Создание виртуальной среды
       ansible.builtin.command:
         cmd: python3 -m venv env
@@ -25,9 +21,9 @@
       register: venv_output
 
     - name: Активация виртуальной среды.
-      command: source bin/activate
+      command: source env/bin/activate
       args:
-        chdir: "{{ ansible_env.HOME }}/env"
+        chdir: "{{ ansible_env.HOME }}"
       when: venv_output is changed
 
     - name: Установка библиотек из requirements.txt
