--- a/playbook_for_local_installation.yml
+++ b/playbook_for_local_installation.yml
@@ -21,7 +21,7 @@
       register: venv_output
 
     - name: Активация виртуальной среды.
-      ansible.builtin.shell: source "{{ ansible_env.HOME }}/env/bin/activate
+      ansible.builtin.shell: source {{ ansible_env.HOME }}/env/bin/activate
       args:
         chdir: "{{ ansible_env.HOME }}"
       when: venv_output is changed
