--- a/playbook_for_local_installation.yml
+++ b/playbook_for_local_installation.yml
@@ -26,7 +26,7 @@
     - name: Клонирование репозитория
       ansible.builtin.git:
         repo: 'https://github.com/KrivoSoft/Anna.git'
-        dest: "{{ ansible_env.HOME }}"
+        dest: "{{ ansible_env.HOME }}/Anna"
         clone: yes
 
     - name: Создание виртуальной среды
