Исправление модификации конфига.

--- a/playbook_for_local_installation.yml
+++ b/playbook_for_local_installation.yml
@@ -50,4 +50,4 @@
       ansible.builtin.replace:
         path: /etc/hosts
         regexp: 'YOUR_TOKEN'
-        replace: '{{ secret_token }}'
+        replace: "{{ secret_token }}"
