--- a/playbook_for_local_installation.yml
+++ b/playbook_for_local_installation.yml
@@ -59,5 +59,5 @@
     - name: Замена названий парковочных мест в конфигурационном файле
       ansible.builtin.replace:
         path: "{{ ansible_env.HOME }}/Anna/settings.yml"
-        regexp: '["333", "464", "501"]'
+        regexp: '\["333", "464", "501"\]'
         replace: "{{ parking_spots }}"
