--- a/playbook_for_local_installation.yml
+++ b/playbook_for_local_installation.yml
@@ -44,6 +44,7 @@
       ansible.builtin.pip:
         requirements: "{{ ansible_env.HOME }}/Anna/requirements.txt"
         virtualenv: "{{ ansible_env.HOME }}/Anna/env"
+        executable: pip3
 
     - name: Копирование конфигурационного файла
       ansible.builtin.copy:
