--- a/playbook_for_local_installation.yml
+++ b/playbook_for_local_installation.yml
@@ -44,7 +44,11 @@
       ansible.builtin.pip:
         requirements: "{{ ansible_env.HOME }}/Anna/requirements.txt"
         virtualenv: "{{ ansible_env.HOME }}/Anna/env"
-        executable: env
+      register: req_output
+
+    - name: Результат успешного запуска
+      ansible.builtin.debug:
+      msg: "{{ req_output }}"
 
     - name: Копирование конфигурационного файла
       ansible.builtin.copy:
